Staff-bio - fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -4462,7 +4462,7 @@ footer .footer--post .post-footer div {
   margin-bottom: 4rem;
 }
 .staff-bio .section--grid {
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 .staff-bio .field--spacing .layout__region--content div.block:nth-of-type(2) {
   margin-top: 2rem;
